--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<name>Spring Boostrap</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.springframework.version>3.1.0.RELEASE</org.springframework.version>
-		<org.springframework.security.version>3.1.0.RELEASE</org.springframework.security.version>
+		<org.springframework.version>3.2.0.RELEASE</org.springframework.version>
+		<org.springframework.security.version>3.2.1.3.RELEASE</org.springframework.security.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,11 +69,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-asm</artifactId>
-			<version>${org.springframework.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
@@ -121,7 +116,7 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.0-beta-1</version>
+				<version>2.0</version>
 			</plugin>
 		</plugins>
 	</build>
